[tool.poetry]
name = "wecook123-crawler"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
pandas = "^1.5.2"
lxml = "^4.9.1"
tabulate = "^0.9.0"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
